// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserList Component should render component correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 10px;
  border: 1px solid #000;
  padding: 20px;
}

.c1 span {
  display: block;
  margin-bottom: 5px;
}

.c2 {
  border-right: 1px solid #000;
  text-align: left;
  width: 260px;
}

.c0 {
  max-height: 300px;
  overflow: scroll;
  margin-top: 15px;
}

<body>
    <div>
      <div>
        <div>
          Filter:
          <input
            placeholder="Enter username"
            type="text"
            value=""
          />
        </div>
        <div
          class="c0"
        >
          <div
            class="c1"
            data-testid="userWrapper"
          >
            <div
              class="c2"
            >
              <span>
                Name: Leanne Graham
              </span>
              <span>
                Username: Bret
              </span>
            </div>
            <div>
              <div>
                <span>
                  Kulas Light
                </span>
                <span>
                  Apt. 556
                </span>
                <span>
                  Gwenborough
                </span>
                <span>
                  92998-3874
                </span>
              </div>
              <div>
                <span>
                  Sincere@april.biz
                </span>
                <span>
                  1-770-736-8031 x56442
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div>
        Filter:
        <input
          placeholder="Enter username"
          type="text"
          value=""
        />
      </div>
      <div
        class="UserList__Users-g96ac2-2 hIhCFv"
      >
        <div
          class="UserList__Row-g96ac2-0 hHBWAY"
          data-testid="userWrapper"
        >
          <div
            class="UserList__UserInfo-g96ac2-1 eGETzj"
          >
            <span>
              Name: Leanne Graham
            </span>
            <span>
              Username: Bret
            </span>
          </div>
          <div>
            <div>
              <span>
                Kulas Light
              </span>
              <span>
                Apt. 556
              </span>
              <span>
                Gwenborough
              </span>
              <span>
                92998-3874
              </span>
            </div>
            <div>
              <span>
                Sincere@april.biz
              </span>
              <span>
                1-770-736-8031 x56442
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UserList Component should render component correctly without users data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c0 {
  max-height: 300px;
  overflow: scroll;
  margin-top: 15px;
}

<div>
      <div>
        <div>
          Filter:
          <input
            placeholder="Enter username"
            type="text"
            value=""
          />
        </div>
        <div
          class="c0"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div>
        Filter:
        <input
          placeholder="Enter username"
          type="text"
          value=""
        />
      </div>
      <div
        class="UserList__Users-g96ac2-2 hIhCFv"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
